--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-David Amos, Dan Bader, Joanna Jablonski, Fletcher Heisler - Python Basics_ A Practical Introduction to Python 3 (2021, Real Python (realpython.com)) - libgen.li.pdf
+David Amos, Dan Bader, Joanna Jablonski, Fletcher Heisler - Python Basics_ A Practical Introduction to Python 3.pdf
