--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-David Amos, Dan Bader, Joanna Jablonski, Fletcher Heisler - Python Basics_ A Practical Introduction to Python 3.pdf
+Python Basics_ A Practical Introduction to Python 3.pdf
